--- a/app/elements/stube-item/stube-item.html
+++ b/app/elements/stube-item/stube-item.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 
-<dom-module id="my-greeting">
+<dom-module id="stube-item">
   <template>
     <style is="custom-style" include="shared-styles"></style>
 
@@ -20,20 +20,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 100%;
         background-color: white;
       }
-      video {
-        width: 100%;
+      img {
+        width: 40%;
+        height: 40%;
+        margin-right: 20px;
       }
       #entry {
         margin: 0px;
       }
+      .container {
+      @apply(--layout-horizontal);
+    }
+    .flexchild {
+      @apply(--layout-flex);
+    }
     </style>
-    <video src="http://gateway.ipfs.io/ipfs/QmTKZgRNwDNZwHtJSjCp6r5FYefzpULfy37JvMt9DwvXse/video.mp4" controls></video>
+    <div class="container">
+
+    <img src="https://i.ytimg.com/vi/gjwr-7PgpN8/mqdefault.jpg" />
+    
+
     <div id="entry">
-    <h2 class="page-title"><span>{{title}}</span></h2>
-    <span class="paper-font-body1">{{description}}</span>
-    <span class="paper-font-body2">{{description}}</span>
-    <span class="paper-font-body3">{{description}}</span>
-    <span class="paper-font-body4">{{description}}</span>
+    <div class="paper-font-body3">{{title}}</div>
+    <div class="paper-font-body1">{{username}}</div>
+    <div class="paper-font-body1"><span>{{views}}</span> views</div>
+
+  </div>
   </div>
     <!-- Listens for "input" event and sets greeting to <input>.value -->
   </template>
@@ -43,18 +55,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       'use strict';
       
       Polymer({
-        is: 'my-greeting',
+        is: 'stube-item',
 
         properties: {
           title: {
             type: String,
-            value: 'GangNam Style!',
+            value: 'BITCOIN VS. ETHEREUM EXPLAINED FOR NOOBZ + Why MICROSOFT Likes It',
             notify: true
           },
-          description: {
+          username: {
             type: String,
-            value: 'GangNam Style!',
+            value: 'kingflurkel',
             notify: true
+          },
+          views: {
+            type: Number,
+            value: 3120
           }
         }
       });
