--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -40,3 +40,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="stube-item/stube-item.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="ipfs-video/ipfs-video.html">
+<link rel="import" href="stube-player/stube-player.html">
+<link rel="import" href="stube-clip/stube-clip.html">
