--- a/app/elements/stube-clip/stube-clip.html
+++ b/app/elements/stube-clip/stube-clip.html
@@ -30,9 +30,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <stube-player hash=""></stube-player>
     <paper-material elevation="1">
       <div class="paper-font-headline">{{title}}</div>
-      <div class="paper-font-body1">{{descr}}</div>
       <div class="paper-font-body2 gris">{{username}}</div>
-      
+      <div class="paper-font-body1">{{descr}}</div>
+
     </paper-material>
 
   </template>
@@ -51,7 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         },
         descr: {
           type: String,
-          value: 'Every night I try to print in ABS but it never works like it should.',
+          value: 'Every night I try to print in ABS but it never works like it should. Every night I try to print in ABS but it never works like it should. Every night I try to print in ABS but it never works like it should.',
           notify: true
         },
         username: {
