--- a/app/elements/stube-item/stube-item.html
+++ b/app/elements/stube-item/stube-item.html
@@ -25,6 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 40%;
         height: 40%;
         margin-right: 20px;
+        max-height: 125px;
       }
       #entry {
         margin: 0px;
@@ -82,7 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           },
           thumb: {
             type: String,
-            value: "https://i.ytimg.com/vi/gjwr-7PgpN8/mqdefault.jpg"
+            value: "https://ipfs.pics/ipfs/QmXRAfpjvqrYfUjqGdsAmzPtai6xW13FG9QcXcb84NjpDX"
           },
           duration: {
             type: Number,
