--- a/app/index.html
+++ b/app/index.html
@@ -124,7 +124,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   username="sponnet" 
                   views="10"
                   duration="1220"
-                  thumb="http://4.bp.blogspot.com/-GA-0S3-8XkQ/UjlGIVpoY5I/AAAAAAAAAFI/VMHUo3w8uS8/s1600/GoProVapourFinish.jpg"
+                  thumb="https://ipfs.pics/ipfs/QmaUgEvmkSrCabEJPd8q4pHoAXRT5gBjM5WbS4sGmS4orQ"
                   ></stube-item>
         
                 <stube-item></stube-item>
