--- a/app/elements/stube-item/stube-item.html
+++ b/app/elements/stube-item/stube-item.html
@@ -47,7 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div id="entry">
     <div class="paper-font-body3">{{title}}</div>
-    <div class="paper-font-body1">{{username}}</div>
+    <div class="paper-font-body1"><span>{{username}}</span></div>
     <div class="paper-font-body1 gris"><span>{{duration}}</span> - <span>{{views}}</span> views</div>
 
   </div>
