--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -22,7 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
-    --dark-primary-color: #303F9F;
+    --dark-primary-color: #272323;
     --default-primary-color: #3F51B5;
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff; /*text/icons*/
@@ -50,6 +50,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   #drawerToolbar {
     color: var(--secondary-text-color);
     background-color: var(--drawer-menu-color);
+    border-bottom: var(--drawer-toolbar-border-color);
+  }
+
+  #mainToolbar {
+    color: white;
+    background-color: var(--dark-primary-color);
     border-bottom: var(--drawer-toolbar-border-color);
   }
 
