--- a/app/elements/stube-clip/stube-clip.html
+++ b/app/elements/stube-clip/stube-clip.html
@@ -9,6 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 
 
 <dom-module id="stube-clip">
@@ -29,10 +30,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
     <stube-player hash=""></stube-player>
     <paper-material elevation="1">
-      <div class="paper-font-headline">{{title}}</div>
-      <div class="paper-font-body2 gris">{{username}}</div>
+      <div class="horizontal layout">
+      <div class="paper-font-headline flex">{{title}}</div>
+      <paper-icon-button toggles icon="favorite"></paper-icon-button>
+      <p class="paper-font-body2 gris">{{likes}}</p>
+    </div>
+      <div class="paper-font-body2 gris"><span>{{username}}</span> - <span>{{views}}</span> views</div>
       <div class="paper-font-body1">{{descr}}</div>
-
+      <div></div>
     </paper-material>
 
   </template>
@@ -58,7 +63,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           type: String,
           value: 'kingflurkel',
           notify: true
+        },
+        views: {
+          type: Number,
+          value: 1233
+        },
+        likes: {
+          type: Number,
+          value: 12
         }
+
       }
     });
   })();
