--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -15,6 +15,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 
+<!-- Sponnet elements -->
+<link rel="import" href="../bower_components/web3-wallet/web3-wallet.html">
+
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -44,3 +47,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="stube-clip/stube-clip.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="ipfs-video/ipfs-video.html">
+<link rel="import" href="ipfs-upload/ipfs-upload.html">
