--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -25,6 +25,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.scrollPageToTop();
     });
 
+    page('/upload', function () {
+      app.route = 'upload';
+      app.scrollPageToTop();
+    });
+
     page('/clip/:hash', function (data) {
       app.route = 'clip';
       app.params = data.params;
