--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -48,3 +48,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="ipfs-video/ipfs-video.html">
 <link rel="import" href="ipfs-upload/ipfs-upload.html">
+<link rel="import" href="comment-item/comment-item.html">
+<link rel="import" href="comment-input/comment-input.html">
