--- a/app/elements/comment-input/comment-input.html
+++ b/app/elements/comment-input/comment-input.html
@@ -9,31 +9,44 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
-<dom-module id="stube-player">
+
+<dom-module id="comment-input">
   <template>
     <style>
       :host {
         display: block;
       }
-      video {
-        width: 100%;
+
+      .avatar {
+        width: 40px;
+        height: 40px;
       }
 
     </style>
-    <video src="http://localhost:8080/ipfs/QmWf9rayrF8UqoDLWXYKcJk5Z9ZtuLJqi3EsVbrhatB3R7" controls></video>
+    <div class="paper-font-body2 gris">1222 comments</div>
+    <div class="horizontal layout">
+
+    <img class="avatar" src="https://pbs.twimg.com/profile_images/516953365402505216/i76BUAyb.jpeg"></img>
+
+    <paper-input label="Comment" class="flex"></paper-input>
+
+    <paper-button raised>Submit</paper-button>
+        </div>
   </template>
   <script>
   (function() {
     'use strict';
 
     Polymer({
-      is: 'stube-player',
+      is: 'comment-input',
 
       properties: {
-        hash: {
+        foo: {
           type: String,
-          value: 'stube-player',
+          value: 'comment-input',
           notify: true
         }
       }
