ipfs file upload element UI

--- a/app/elements/stube-clip/stube-clip.html
+++ b/app/elements/stube-clip/stube-clip.html
@@ -41,6 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </paper-material>
 
     <paper-material elevation="1">
+    <div class="paper-font-body2 gris">1222 comments</div>
     <comment-input></comment-input>
     </paper-material>
 
@@ -48,7 +49,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- <template is="dom-repeat"> -->
       <comment-item></comment-item>
       <comment-item></comment-item>
-      <comment-item></comment-item>
+      <comment-item>
+        <comment-item>
+          <comment-item></comment-item>
+        </comment-item>
+      </comment-item>
     <!-- </template> -->
     </paper-material>
 
