--- a/app/elements/comment-item/comment-item.html
+++ b/app/elements/comment-item/comment-item.html
@@ -9,12 +9,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../comment-input/comment-input.html">
 
 <dom-module id="comment-item">
   <template>
     <style>
       :host {
         display: block;
+        margin-top: 20px;
         margin-bottom: 20px;
       }
       .avatar {
@@ -26,8 +28,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        <img class="avatar" src="https://pbs.twimg.com/profile_images/516953365402505216/i76BUAyb.jpeg"></img>
        <div class="vertical layout">
         <div class="paper-font-body2 gris"><span>kingflurkel</span> - 2 hours ago</div>
-        <div class="flex">Lorem ipsum sit dolor et amet</div>
-        <div class="">reply thumbs up thumbs down</div>
+        <div class="paper-font-body1 flex">Lorem ipsum sit dolor et amet</div>
+        <div class="horizontal layout">
+          <paper-icon-button icon="reply" on-tap="toggleCommentview"></paper-icon-button>
+          <paper-icon-button icon="favorite"></paper-icon-button>
+        </div>
+        <template is="dom-if" if="{{toggleComment}}">
+          <comment-input></comment-input>
+        </template>
+        <div>
+          <content></content>
+        </div>
       </div>
     </div>
     
@@ -45,7 +56,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           type: String,
           value: 'comment-item',
           notify: true
+        },
+        toggleComment: {
+          type: Boolean,
+          value: false
         }
+      },
+
+      toggleCommentview: function(){
+        this.toggleComment = !this.toggleComment;
       }
     });
   })();
