--- a/app/elements/ipfs-upload/ipfs-upload.html
+++ b/app/elements/ipfs-upload/ipfs-upload.html
@@ -9,15 +9,39 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/file-upload/file-upload.html">
+<link rel="import" href="../../bower_components/paper-toggle-button/paper-toggle-button.html">
 
 <dom-module id="ipfs-upload">
   <template>
+    <style is="custom-style" include="shared-styles"></style>
     <style>
       :host {
         display: block;
       }
+      .cloud {
+        width: 60px;
+        height: 60px;
+      }
+      .uploadPlane {
+        background-color: #eeeeee;
+        border-radius: 20px;
+      }
     </style>
-    <div>Hello from <span>{{foo}}</span></div>
+    <div>
+      <div class="horizontal layout center-center uploadPlane">
+        <file-upload target="">
+          <img class="cloud" src="upload-cloud.svg" />
+          <h2 class="page-title">Choose file</h2>
+        </file-upload>
+      </div>
+      <paper-input label="Title"></paper-input>
+      <paper-input label="Description"></paper-input>
+      <paper-input label="Tags"></paper-input>
+      <paper-toggle-button checked>Public</paper-toggle-button>
+      <paper-button raised>cancel</paper-button>
+      <paper-button raised>save</paper-button>
+    </div>
   </template>
   <script>
   (function() {
