--- a/app/elements/ipfs-upload/ipfs-upload.html
+++ b/app/elements/ipfs-upload/ipfs-upload.html
@@ -39,8 +39,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <paper-input label="Description"></paper-input>
       <paper-input label="Tags"></paper-input>
       <paper-toggle-button checked>Public</paper-toggle-button>
-      <paper-button raised>cancel</paper-button>
-      <paper-button raised>save</paper-button>
+      <paper-button raised>Cancel</paper-button>
+      <paper-button raised>Save</paper-button>
     </div>
   </template>
   <script>
