--- a/app/elements/stube-player/stube-player.html
+++ b/app/elements/stube-player/stube-player.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
     </style>
-    <video src="http://localhost:8080/ipfs/QmWf9rayrF8UqoDLWXYKcJk5Z9ZtuLJqi3EsVbrhatB3R7" controls></video>
+    <video src="//gateway.ipfs.io/ipfs/QmQ8kBZKJ174924XpLZymSvuz4TSRQ69Aungy9wVeUuL8i" controls></video>
   </template>
   <script>
   (function() {
