--- a/app/elements/stube-item/stube-item.html
+++ b/app/elements/stube-item/stube-item.html
@@ -88,7 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           },
           thumb: {
             type: String,
-            value: "https://ipfs.pics/ipfs/QmXRAfpjvqrYfUjqGdsAmzPtai6xW13FG9QcXcb84NjpDX"
+            value: 'https://ipfs.pics/ipfs/QmXRAfpjvqrYfUjqGdsAmzPtai6xW13FG9QcXcb84NjpDX'
           },
           duration: {
             type: Number,
@@ -101,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         hitMe: function(){
           //this.fire('go', { msg: "/clip/hash1" });
           //location ="/clip/hash1";
-          page("/clip/hash");
+          page('/clip/hash');
         }
       });
     })();
