--- a/app/index.html
+++ b/app/index.html
@@ -131,12 +131,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <h1 class="paper-font-headline">Since you were gone</h1>
          
                 <stube-item 
-                  title="Why I will never print in ABS again" 
-                  username="sponnet" 
-                  views="10"
-                  duration="1220"
-                  thumb="https://ipfs.pics/ipfs/QmaUgEvmkSrCabEJPd8q4pHoAXRT5gBjM5WbS4sGmS4orQ"
-                  ></stube-item>
+                  hash="QmdRMCUUCBmFAMwmh9Hz8v2MignXsjJTzZCj66EsTVq1gg"></stube-item>
         
                 <stube-item></stube-item>
                 <stube-item></stube-item>
