fixed linting errors.. use single quotes for all strings

--- a/app/elements/stube-clip/stube-clip.html
+++ b/app/elements/stube-clip/stube-clip.html
@@ -107,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _ipfsobject: function(){
         console.log(this.ipfsobject);
  
-        this.$.ajax.url = "//localhost:8080/ipfs/"+this.ipfsobject;
+        this.$.ajax.url = '//localhost:8080/ipfs/'+this.ipfsobject;
 
         this.$.ajax.generateRequest();
       },
